--- a/VRChat/42/1296842.html
+++ b/VRChat/42/1296842.html
@@ -77,7 +77,7 @@
     <script src=
     "https://asset.booth.pm/assets/d85f848c3417e798bfc2.js" defer=
     "defer" nonce=
-    "BpxyM9EoouMtybi6LfXqZEn84a1YBFVHNC5M9Sy1jEI="></script>
+    "AejEouF+8uL1qTNDjTw9LhuLr1rm3/ni7AuDCfJBzHQ="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"VRCCamController","description":"# VRCCamController\nVRChat にアバターをアップロードするときの Upload Image に指定した画像を表示させるのを簡単にするスクリプトと、そのスクリプトをくっつけたプレハブです。\n\n## 使い方\n1. ダウンロードした zip ファイルを解凍して出てくる `VRCCamController.unitypackage` を実行して、 Unity へファイルを読み込んでください\n2. 読み込まれた `Assets/Plugins/KmnkTools/VRCCamController/VRCCamController` のプレハブ（青い立方体のアイコン）をアップロード用のモデルを設定しているシーンにドラッグアンドドロップしてください\n3. 表示したい画像を用意して、 Unity の `Project` タブのどこかに放り込んで読み込ませてください\n4. 読み込まれた画像を選択すると `Inspector` タブに詳細設定が表示されるので、 `Texture Type` を `Sprite (2D and UI)` に設定して、 `Apply` を押して適用してください\n5. `Hierarchy` タブで 2 でシーンに置いた `VRCCamController` を選択して `Inspector` タブの `Image Sprite` に準備した画像をドラッグアンドロップしてください \n6. 普段モデルをアップロードする時のように `VRChat` タブの `Buld \u0026 Publish` を押して、 `Game` タブに表示される UI の `Upload Image` にチェックを入れると、指定した画像が表示されるはずなので、 `VRCCamController` の `Size` で大きさを調整してください\n7. 良い感じになったら、いつもどおりアップロードしてください\n\n## 何をしているのか\nアップロード用のスクリーンショットを撮るカメラ（ `VRCCam` ）を探して、ちょっとそれっぽく設定をいじっているだけです。  \nですので、手動でも同じことはできます。あくまで、簡単化のスクリプトです。\n\n## その他\n- もしご要望があれば、お知らせいただければできる範囲で対応します\n- 簡単なことしかやっていないので、適当に改造して使ってみてください\n- もし追加したい機能差分があれば [Github リポジトリ](https://github.com/kmnk/VRCCamController) に PullRequest して頂ければ確認します\n\n## License\nMIT License","url":"https://booth.pm/ja/items/1296842","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/5732517f-498d-45e3-b6b7-fd8ead6991fd/i/1296842/a9972edc-a6d8-45e3-bef4-7682ed4c368a_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="BpxyM9EoouMtybi6LfXqZEn84a1YBFVHNC5M9Sy1jEI="></script>
+    nonce="AejEouF+8uL1qTNDjTw9LhuLr1rm3/ni7AuDCfJBzHQ="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -166,7 +166,7 @@
                           "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
-                              234
+                              235
                             </div>
                           </div></a><a class=
                           "remove-from-wish-list no-underline !text-current"
@@ -181,7 +181,7 @@
                           "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
-                              234
+                              235
                             </div>
                           </div></a>
                         </div>
@@ -532,7 +532,7 @@
       </div>
     </div>
     <div data-event-options=
-    "[{&quot;label&quot;:&quot;COMIC1☆22&quot;,&quot;value&quot;:&quot;comic1-22&quot;},{&quot;label&quot;:&quot;第二十回 博麗神社例大祭&quot;,&quot;value&quot;:&quot;reitaisai-20&quot;},{&quot;label&quot;:&quot;#にじそうさく07&quot;,&quot;value&quot;:&quot;nijisousaku07&quot;},{&quot;label&quot;:&quot;COMITIA144&quot;,&quot;value&quot;:&quot;comitia144&quot;},{&quot;label&quot;:&quot;#超エアブー230505&quot;,&quot;value&quot;:&quot;air-boo-0505&quot;},{&quot;label&quot;:&quot;コスホリック35&quot;,&quot;value&quot;:&quot;cosholic35&quot;},{&quot;label&quot;:&quot;SUPER COMIC CITY 30&quot;,&quot;value&quot;:&quot;supercomiccity30&quot;},{&quot;label&quot;:&quot;M3-2023春&quot;,&quot;value&quot;:&quot;m3-2023s&quot;},{&quot;label&quot;:&quot;ドールズ パーティー49&quot;,&quot;value&quot;:&quot;dollsparty49&quot;},{&quot;label&quot;:&quot;J.GARDEN53&quot;,&quot;value&quot;:&quot;j-garden53&quot;}]"
+    "[{&quot;label&quot;:&quot;となりのモケイフェスティバル3&quot;,&quot;value&quot;:&quot;bf-tonamo3&quot;},{&quot;label&quot;:&quot;ゲームマーケット2023春&quot;,&quot;value&quot;:&quot;gamemarket-2023s&quot;},{&quot;label&quot;:&quot;COMIC1☆22&quot;,&quot;value&quot;:&quot;comic1-22&quot;},{&quot;label&quot;:&quot;第二十回 博麗神社例大祭&quot;,&quot;value&quot;:&quot;reitaisai-20&quot;},{&quot;label&quot;:&quot;#にじそうさく07&quot;,&quot;value&quot;:&quot;nijisousaku07&quot;},{&quot;label&quot;:&quot;COMITIA144&quot;,&quot;value&quot;:&quot;comitia144&quot;},{&quot;label&quot;:&quot;#超エアブー230505&quot;,&quot;value&quot;:&quot;air-boo-0505&quot;},{&quot;label&quot;:&quot;コスホリック35&quot;,&quot;value&quot;:&quot;cosholic35&quot;},{&quot;label&quot;:&quot;SUPER COMIC CITY 30&quot;,&quot;value&quot;:&quot;supercomiccity30&quot;},{&quot;label&quot;:&quot;M3-2023春&quot;,&quot;value&quot;:&quot;m3-2023s&quot;}]"
     data-ga-from="market_show" data-parent-category-options=
     "[{&quot;label&quot;:&quot;漫画&quot;,&quot;value&quot;:&quot;漫画&quot;},{&quot;label&quot;:&quot;イラスト&quot;,&quot;value&quot;:&quot;イラスト&quot;},{&quot;label&quot;:&quot;小説・その他書籍&quot;,&quot;value&quot;:&quot;小説・その他書籍&quot;},{&quot;label&quot;:&quot;グッズ&quot;,&quot;value&quot;:&quot;グッズ&quot;},{&quot;label&quot;:&quot;ファッション&quot;,&quot;value&quot;:&quot;ファッション&quot;},{&quot;label&quot;:&quot;アクセサリー&quot;,&quot;value&quot;:&quot;アクセサリー&quot;},{&quot;label&quot;:&quot;フィギュア・ぬいぐるみ・ドール&quot;,&quot;value&quot;:&quot;フィギュア・ぬいぐるみ・ドール&quot;},{&quot;label&quot;:&quot;3Dモデル&quot;,&quot;value&quot;:&quot;3Dモデル&quot;},{&quot;label&quot;:&quot;音楽&quot;,&quot;value&quot;:&quot;音楽&quot;},{&quot;label&quot;:&quot;音声作品&quot;,&quot;value&quot;:&quot;音声作品&quot;},{&quot;label&quot;:&quot;ゲーム&quot;,&quot;value&quot;:&quot;ゲーム&quot;},{&quot;label&quot;:&quot;ソフトウェア・ハードウェア&quot;,&quot;value&quot;:&quot;ソフトウェア・ハードウェア&quot;},{&quot;label&quot;:&quot;素材データ&quot;,&quot;value&quot;:&quot;素材データ&quot;},{&quot;label&quot;:&quot;映像作品&quot;,&quot;value&quot;:&quot;映像作品&quot;},{&quot;label&quot;:&quot;写真作品&quot;,&quot;value&quot;:&quot;写真作品&quot;},{&quot;label&quot;:&quot;コスプレ&quot;,&quot;value&quot;:&quot;コスプレ&quot;},{&quot;label&quot;:&quot;絵画・アート作品&quot;,&quot;value&quot;:&quot;絵画・アート作品&quot;}]"
     data-portal-url="https://booth.pm/ja" data-search-params=
